# benchmarks

./: CMakeLists.txt  README.md  all-progs  push-all  wasm-to-bin  wasm-to-bin-all
micro-suite/: CMakeLists.txt  README.md  all-progs  compile-all  compile-and-push-all  conditionals.c  copy.cpp  corrections.c  corrections64.c  fannkuch.c  fasta.cpp  final-compile-all  ifs.c  make-csv.awk  memops.c  primes.c  push-all  size-all  skinning.cpp  time-all  wasm2c-all
run/: run.bzip2  run.gzip  run.mcf  run.parser  run.vpr
